wp-content/themes/betheme-child/style.css
/*
Theme Name: Betheme Child
Theme URI: https://themes.muffingroup.com/betheme
Author: Muffin group
Author URI: https://muffingroup.com
Description: Child Theme for Betheme
Template: betheme
Version: 2.0.1
*/

.mfn-main-slider.mfn-rev-slider {
  background: #002d6d;
}

.logo-wrapper > img {
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
}

.protondb-wrapper .mcb-column-inner {
  margin-bottom: 0px;
}

.apps-fade::after {
  background: radial-gradient(#262626 30%, rgba(0,0,0,0) 100%);
  top: 0;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  position: absolute;
}

.mfn-header-sticky-section {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
}

.trailer_box .desc .subtitle, .trailer_box.plain .desc .line {
  background-color: rgba(0,0,0,0.4);
  backdrop-filter: blur(10px);
  background-image: none;
}

.trailer_box .title {
  color: #fff;
  font-size: 15px !important;
}

.trailer_box .desc > .line {
  display: none !important;
  visibility: hidden !important;
}

.trailer_box:hover .desc .subtitle {
  bottom: inherit;
  font-size: 18px!important;
}

select:focus {
  color: #fff;
  background-color: #464646 !important;
}

.iso-selection {
  margin-bottom: 30px;
  float: left;
  width: 100%;
}

.code {
  padding: 5px;
  background: #000;
  border-radius: 5px;
  font-family: 'Fira Code';
  font-size: 10px;
  line-height: 14px;
}

.command-header {
  width: 100%;
  float: left;
  margin-bottom: 5px;
}

.command {
  background: #000;
  border-radius: 5px;
  padding: 10px;
  font-size: 10px;
  line-height:25px;
  font-family: 'Fira Code';
}

#image-builder-result {
  transition: all 1s;
}

.mfn-header-tmpl-menu-sidebar {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
}

.mfn-header-menu .mfn-menu-li > .mfn-menu-link {
  color: #fff;
}

.mfn-close-icon .icon {
  color: #fff !important;
}

.mfn-header-menu .mfn-menu-li:hover > .mfn-menu-link {
  color: #fff;
}

.hidden-fade {
  opacity: 0;
  overflow: hidden;
  visibility: hidden;
  transform: scale(0.75);
}

.shown-fade {
  opacity: 1;
  visibility: visible;
  transform: scale(1.0);
}

#apps {
  background-repeat: no-repeat;
  background-position: center;
}

#image-picker {
  padding-bottom: 0px;
}

h2 {
  font-size: 55px;
}

rs-slide {
  top: -60px;
}

.gradients-container {
  top: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  filter: brightness(45%) blur(45px)!important;
}

@keyframes moveInCircle {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes moveVertical {
  0% {
    transform: translateY(-50%);
  }
  50% {
    transform: translateY(50%);
  }
  100% {
    transform: translateY(-50%);
  }
}

@keyframes moveHorizontal {
  0% {
    transform: translateX(-50%) translateY(-10%);
  }
  50% {
    transform: translateX(50%) translateY(10%);
  }
  100% {
    transform: translateX(-50%) translateY(-10%);
  }
}

.gradient-bg {
  width: 100vw;
  height: 100vh;
  position: relative;
  overflow: hidden;
  background: linear-gradient(40deg, rgb(138, 42, 226), rgb(0, 71, 171));
  top: 0;
  left: 0;
  pointer-events:none;

  svg {
    display: none;
  }

  .gradients-container {
    filter: url(#goo) blur(40px) ;
    width: 100%;
    height: 100%;
  }

  .g1 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(18, 113, 255, 0.8) 0, rgba(18, 113, 255, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: 90%;
    height: 90%;
    top: calc(50% - 90% / 2);
    left: calc(50% - 90% / 2);

    transform-origin: center center;
    animation: moveVertical 30s ease infinite;

    opacity: 1;
  }

  .g2 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(221, 74, 255, 0.8) 0, rgba(221, 74, 255, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: 90%;
    height: 90%;
    top: calc(50% - 90% / 2);
    left: calc(50% - 90% / 2);

    transform-origin: calc(50% - 400px);
    animation: moveInCircle 20s reverse infinite;

    opacity: 1;
  }

  .g3 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(100, 220, 255, 0.8) 0, rgba(100, 220, 255, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: 90%;
    height: 90%;
    top: calc(50% - 90% / 2 + 200px);
    left: calc(50% - 90% / 2 - 500px);

    transform-origin: calc(50% + 400px);
    animation: moveInCircle 40s linear infinite;

    opacity: 1;
  }

  .g4 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(200, 50, 50, 0.8) 0, rgba(200, 50, 50, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: 80%;
    height: 80%;
    top: calc(50% - 90% / 2);
    left: calc(50% - 90% / 2);

    transform-origin: calc(50% - 200px);
    animation: moveHorizontal 40s ease infinite;

    opacity: 0.7;
  }

  .g5 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(180, 180, 50, 0.8) 0, rgba(180, 180, 50, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: calc(90% * 2);
    height: calc(90% * 2);
    top: calc(50% - 90%);
    left: calc(50% - 90%);

    transform-origin: calc(50% - 800px) calc(50% + 200px);
    animation: moveInCircle 20s ease infinite;

    opacity: 1;
  }

  .interactive {
    position: absolute;
    background: radial-gradient(circle at center, rgba(140, 100, 255, 0.8) 0, rgba(140, 100, 255, 0) 50%) no-repeat;
    mix-blend-mode: soft-light;

    width: 100%;
    height: 100%;
    top: -50%;
    left: -50%;

    opacity: 0.7;
  }
}

@media only screen and (min-width: 481px) and (max-width: 1440px) {
  #mfn-header-template .button {
    font-size: 10px !important;
    margin-left: 15px !important;
  }

  #apps {
    background-size: contain;
  }
}

@media only screen and (min-width: 481px) {
  #slider-1-slide-1-layer-0 {
    white-space:nowrap!important;
  }
}

@media only screen and (min-width: 1441px) {
  #apps {
    background-position: top;
  }
}

@media only screen and (max-width: 1440px) {
  .apps-fade::after {
    background: radial-gradient(#262626 50%, rgba(0,0,0,0) 100%);
  }
}

@media only screen and (max-width: 480px) {
  .hidden-fade {
    display: none;
  }

  #apps .mcb-item-button-inner {
    padding-bottom: 30px;
  }

  #apps {
    background-size: contain;
    background-position-y: 70%;
    background-origin: inherit;
  }
}

